# messenger

./: CMakeLists.txt  CONTRIBUTING.md
core/: CMakeLists.txt
core/include/: account.h
core/include/core/: device.h
core/src/: account.c  device.c
crypto/: CMakeLists.txt
crypto/include/: hash.h  identity.h  sign.h
crypto/include/crypto/: key_derivation.h  random.h
crypto/src/: hash.c  identity.c  key_derivation.c  random.c  sign.c
docs/: philosophy.md  roadmap.md
docs/RFC/: RFC-0001-account-creation.md  RFC-0003-new-device.md
docs/coding/: error-handling.md
docs/design/: RFC-001-account-creation.md
docs/development/: commits.md  workflow.md
protocol/: CMakeLists.txt
protocol/include/protocol/: protocol.h  session.h
protocol/src/: fsm.c  protocol.c  session.c
protocol/src/internal/: fsm.h  protocol.h  session.h  state_machine.h
shared/: CMakeLists.txt  result.h
shared/include/shared/: result.h
tests/: CMakeLists.txt  test_main.c
tests/core/: test_account.c  test_account_create.c  test_account_import.c  test_device_new.c  test_device_verify.c  test_identity_verify.c
tests/crypto/: test_key_derivation.c  test_sign.c
